Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49628

QXcbWindow ignores stays-on-top or -below

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.0 Alpha
    • 5.5.1, 5.6, 5.7
    • QPA: X11/XCB
    • None
    • 5645dc9f8a5264bde855d5b14c619198cfedf3a5

      Consider the following example:

      #include <QGuiApplication>
      #include <QWindow>
      
      int main(int argc, char *argv[])
      {
          QGuiApplication a(argc, argv);
          QWindow window;
          window.show();
          window.setFlags(window.flags() | Qt::WindowStaysOnTopHint);
      
          return a.exec();
      }
      

      One would expect the window to stay on top, but it doesn't

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes