Xcb: propagate stays-on-top or -below hints from window flags

Before, you had to first hide a window, then set the flags, then show
it again as the flags were only applied when showing the window. This
is unintuitive.

Task-number: QTBUG-49628
Change-Id: I240e633ac2581c0ff0e4f35dead1b79e15e15350
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>